--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-quick-protobuf = "0.6.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+actix-web = "2.0"
+actix-rt = "1.0"
+diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
+dotenv = "0.15"
+r2d2 = "0.8"
+ring = "0.16.12"
+chrono = { version = "0.4", features = ["serde"] }
+base64 = "0.12"
+uuid = { version = "0.8", features = ["v4", "serde"]}
