--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 actix-web = "2.0"
 actix-rt = "1.0"
+actix-service = "1.0"
+futures = "0.3"
 diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
 dotenv = "0.15"
 r2d2 = "0.8"
