--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ actix-web = "2.0"
 actix-rt = "1.0"
 actix-service = "1.0"
 futures = "0.3"
-diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
+diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "uuidv07", "serde_json"] }
 dotenv = "0.15"
 r2d2 = "0.8"
 ring = "0.16.12"
